--- a/WootricSDK-Demo/WootricSDK-Demo.xcodeproj/xcshareddata/xcschemes/WootricSDK-Demo.xcscheme
+++ b/WootricSDK-Demo/WootricSDK-Demo.xcodeproj/xcshareddata/xcschemes/WootricSDK-Demo.xcscheme
@@ -14,24 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "B2DC6F011B81E6F900F599B3"
-               BuildableName = "WootricSDK.framework"
-               BlueprintName = "WootricSDK"
-               ReferencedContainer = "container:WootricSDK.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "NO"
-            buildForArchiving = "NO"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "B2DC6F0C1B81E6F900F599B3"
-               BuildableName = "WootricSDKTests.xctest"
-               BlueprintName = "WootricSDKTests"
-               ReferencedContainer = "container:WootricSDK.xcodeproj">
+               BlueprintIdentifier = "B2DC6ECE1B81E5D800F599B3"
+               BuildableName = "WootricSDK-Demo.app"
+               BlueprintName = "WootricSDK-Demo"
+               ReferencedContainer = "container:WootricSDK-Demo.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -41,24 +27,15 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "B2DC6F011B81E6F900F599B3"
-            BuildableName = "WootricSDK.framework"
-            BlueprintName = "WootricSDK"
-            ReferencedContainer = "container:WootricSDK.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
       <Testables>
          <TestableReference
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "B2DC6F0C1B81E6F900F599B3"
-               BuildableName = "WootricSDKTests.xctest"
-               BlueprintName = "WootricSDKTests"
-               ReferencedContainer = "container:WootricSDK.xcodeproj">
+               BlueprintIdentifier = "B2DC6EE71B81E5D800F599B3"
+               BuildableName = "WootricSDK-DemoTests.xctest"
+               BlueprintName = "WootricSDK-DemoTests"
+               ReferencedContainer = "container:WootricSDK-Demo.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -73,15 +50,16 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "B2DC6F011B81E6F900F599B3"
-            BuildableName = "WootricSDK.framework"
-            BlueprintName = "WootricSDK"
-            ReferencedContainer = "container:WootricSDK.xcodeproj">
+            BlueprintIdentifier = "B2DC6ECE1B81E5D800F599B3"
+            BuildableName = "WootricSDK-Demo.app"
+            BlueprintName = "WootricSDK-Demo"
+            ReferencedContainer = "container:WootricSDK-Demo.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -89,15 +67,16 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "B2DC6F011B81E6F900F599B3"
-            BuildableName = "WootricSDK.framework"
-            BlueprintName = "WootricSDK"
-            ReferencedContainer = "container:WootricSDK.xcodeproj">
+            BlueprintIdentifier = "B2DC6ECE1B81E5D800F599B3"
+            BuildableName = "WootricSDK-Demo.app"
+            BlueprintName = "WootricSDK-Demo"
+            ReferencedContainer = "container:WootricSDK-Demo.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
